fix(styles): adjusts the Badge gap
removes the old line that was still in the document for some reason

--- a/packages/styles/src/variables/components/_badge.scss
+++ b/packages/styles/src/variables/components/_badge.scss
@@ -11,7 +11,6 @@
 
 // Design System custom variables
 $badge-height: button.$btn-height-rg;
-$badge-gap: spacing.$size-regular;
 $badge-gap: spacing.$size-mini;
 $badge-border-color: var(--post-gray-60);
 $badge-border-width: commons.$border-thick;
